tests/new_env_jsx_pragma/new_env_jsx_pragma.exp
Error ------------------------------------------------------------------------------------------------------ test.js:3:9

Cannot resolve name `call`. [cannot-resolve-name]

   3|  * @jsx call()
              ^^^^


Error ---------------------------------------------------------------------------------------------------- test2.js:6:25

Cannot create `div` element because number [1] is not a function. [not-a-function]

   test2.js:6:25
   6| function mk() { return <div /> }; // Error, call can't extract base name
                              ^^^

References:
   test2.js:8:26
   8| function call() { return 42; }
                               ^^ [1]



Found 2 errors
